# mipt-programming-course

./: .gitignore  CMakeLists.txt  out.txt
arrayutils/: CMakeLists.txt
arrayutils/include/: array.h  rhombarray.h  trianglearray.h
arrayutils/src/: main.c  rhombarray.c  trianglearray.c
lib/: CMakeLists.txt
log/: log.txt
onegin/: CMakeLists.txt
onegin/include/: file_linebuf.h  file_strbuf.h  fileline_arr.h  sortutils.h  strswp.h
onegin/res/: onegin.txt
onegin/src/: file_linebuf.c  file_strbuf.c  fileline_arr.c  main.c  sortutils.c  strswp.c
